force-app/main/default/objects/Candidate_List__c/Candidate_List__c.object-meta.xml
<CustomObject>
    <label>Candidate List</label>
    <nameField>
        <label>Candidate List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>