force-app/main/default/objects/Candidate_List__c/fields/LegacyOpaID__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LegacyOpaID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>