force-app/main/default/objects/Candidate_List__c/fields/List_Group__c.field-meta.xml
<CustomField>
    <fullName>List_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Group</label>
    <referenceTo>List_Group__c</referenceTo>
    <relationshipLabel>Candidate Lists</relationshipLabel>
    <relationshipName>Candidate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>