force-app/main/default/objects/Candidate_List__c/fields/List_Type__c.field-meta.xml
<CustomField>
    <fullName>List_Type__c</fullName>
    <label>List Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>