force-app/main/default/objects/Candidate_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>List_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>List_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>